metadata-objects/extracted/unpackaged/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>A3Status__c</fullName>
        <label>Estado de A3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Enviado</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Modificar Pedido</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Error Envío</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Pedido Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountAlias__c</fullName>
        <formula>Account__r.Alias__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCodeA3__c</fullName>
        <label>Código Cliente hijo A3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessHistorical__c</fullName>
        <formula>TEXT( Account__r.BusinessHistorical__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empresa Histórico</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <formula>TEXT(Account__r.Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empresa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportista</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryNoteNumber__c</fullName>
        <label>Nº de Albarán</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDateTime__c</fullName>
        <label>Fecha de caducidad</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Fecha de caducidad OLD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinalAmount__c</fullName>
        <label>Importe Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FreightDate__c</fullName>
        <label>Fecha de carga</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FreightOder__c</fullName>
        <label>Orden de Carga</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Nº de Factura</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margen</label>
        <summarizedField>OrderItem__c.Margin__c</summarizedField>
        <summaryForeignKey>OrderItem__c.Pedido__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>Fecha del pedido</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Nº Pedido A3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Forma de pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PaymentMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlantStatus__c</fullName>
        <label>Estado de Planta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>(Sin Estado)</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Pendiente (Planta)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Fuera de Planta</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Cargando</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Incompleta</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Albarán</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Cancelada</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Fin Manual</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Caducada</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Plataforma</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Platform</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proforma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proforma</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Venta a 15º</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serie__c</fullName>
        <label>Serie</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>Pdte envío a Planta</fullName>
                </value>
                <value>
                    <fullName>Enviado a Planta</fullName>
                </value>
                <value>
                    <fullName>Fuera de Planta</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
                <value>
                    <fullName>Caducado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Almacén</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Store</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxBase__c</fullName>
        <label>Base Imponible</label>
        <summarizedField>OrderItem__c.TotalAmount__c</summarizedField>
        <summaryForeignKey>OrderItem__c.Pedido__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Pedido</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>Business__c</columns>
        <columns>Status__c</columns>
        <columns>A3Status__c</columns>
        <columns>TaxBase__c</columns>
        <columns>OrderDate__c</columns>
        <columns>FreightOder__c</columns>
        <columns>Store__c</columns>
        <columns>Carrier__c</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos los Pedidos</label>
    </listViews>
    <listViews>
        <fullName>Copia_de_PedidosHoy_Producto</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>Status__c</columns>
        <columns>Store__c</columns>
        <columns>FreightOder__c</columns>
        <columns>Carrier__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PaymentMethod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/17/2025 12:00 AM</value>
        </filters>
        <label>Pedidos D-1 + Producto</label>
    </listViews>
    <listViews>
        <fullName>Copia_de_PedidosHoy_ProductoV2</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Proforma__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Store__c</columns>
        <columns>FreightOder__c</columns>
        <columns>Carrier__c</columns>
        <columns>PaymentMethod__c</columns>
        <columns>AccountCodeA3__c</columns>
        <columns>FreightDate__c</columns>
        <columns>DeliveryNoteNumber__c</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>OrderNumber__c</columns>
        <columns>FinalAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/1/2025 12:00 AM</value>
        </filters>
        <label>ProForma + PedidosHoy + Producto</label>
    </listViews>
    <listViews>
        <fullName>Mis_Pedidos_Pendientes_de_A3</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>Business__c</columns>
        <columns>Status__c</columns>
        <columns>TaxBase__c</columns>
        <columns>OrderDate__c</columns>
        <columns>Store__c</columns>
        <columns>Carrier__c</columns>
        <columns>InvoiceNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrderNumber__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2025 12:00 AM</value>
        </filters>
        <label>Pedidos Pendientes de A3</label>
    </listViews>
    <listViews>
        <fullName>PedidosHoy_Producto</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>Status__c</columns>
        <columns>Store__c</columns>
        <columns>FreightOder__c</columns>
        <columns>Carrier__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PaymentMethod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>PedidosHoy + Producto</label>
    </listViews>
    <listViews>
        <fullName>Pedidos_Venta_a_15</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>Status__c</columns>
        <columns>TaxBase__c</columns>
        <columns>OrderDate__c</columns>
        <columns>FreightOder__c</columns>
        <columns>Store__c</columns>
        <columns>Carrier__c</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale15__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Distribución</value>
        </filters>
        <label>Pedidos Venta a 15º Distribución</label>
    </listViews>
    <listViews>
        <fullName>Pedidos_Venta_a_15_Energia</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>Status__c</columns>
        <columns>TaxBase__c</columns>
        <columns>OrderDate__c</columns>
        <columns>FreightOder__c</columns>
        <columns>Store__c</columns>
        <columns>Carrier__c</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale15__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Energía</value>
        </filters>
        <label>Pedidos Venta a 15º Energía</label>
    </listViews>
    <listViews>
        <fullName>Pedidos_Venta_a_15_Suministro</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Account__c</columns>
        <columns>Business__c</columns>
        <columns>Status__c</columns>
        <columns>TaxBase__c</columns>
        <columns>OrderDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>Store__c</columns>
        <columns>Carrier__c</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sale15__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Suministro</value>
        </filters>
        <label>Pedidos Venta a 15º Suministro</label>
    </listViews>
    <listViews>
        <fullName>Pedidos_pendientes_de_Carga</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>Business__c</columns>
        <columns>Status__c</columns>
        <columns>TaxBase__c</columns>
        <columns>OrderDate__c</columns>
        <columns>FreightOder__c</columns>
        <columns>Store__c</columns>
        <columns>Carrier__c</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FreightOder__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Distribución</value>
        </filters>
        <label>Pedidos pendientes de Carga Distribución</label>
    </listViews>
    <listViews>
        <fullName>Pedidos_pendientes_de_Carga_Energia</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>Business__c</columns>
        <columns>Status__c</columns>
        <columns>TaxBase__c</columns>
        <columns>OrderDate__c</columns>
        <columns>FreightOder__c</columns>
        <columns>Store__c</columns>
        <columns>Carrier__c</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FreightOder__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Energía</value>
        </filters>
        <label>Pedidos pendientes de Carga Energía</label>
    </listViews>
    <listViews>
        <fullName>Pedidos_pendientes_de_Carga_Sumi</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Account__c</columns>
        <columns>Business__c</columns>
        <columns>Status__c</columns>
        <columns>TaxBase__c</columns>
        <columns>OrderDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>Store__c</columns>
        <columns>Carrier__c</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FreightOder__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Suministro</value>
        </filters>
        <label>Pedidos pendientes de Carga Suministro</label>
    </listViews>
    <listViews>
        <fullName>Transportista_OC</fullName>
        <columns>NAME</columns>
        <columns>FreightOder__c</columns>
        <columns>Account__c</columns>
        <columns>AccountAlias__c</columns>
        <columns>PlantStatus__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OrderDate__c</columns>
        <columns>Carrier__c</columns>
        <columns>Store__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/14/2025 12:00 AM</value>
        </filters>
        <label>Estado Planta OC</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0}</displayFormat>
        <label>Número de Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos</pluralLabel>
    <recordTypes>
        <fullName>Corrector</fullName>
        <active>true</active>
        <description>Pedido corrector con valores negativos para anular el pedido original</description>
        <label>Corrector</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operador</fullName>
        <active>true</active>
        <label>Operador</label>
    </recordTypes>
    <recordTypes>
        <fullName>Original</fullName>
        <active>true</active>
        <description>Pedido original</description>
        <label>Original</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rectificado</fullName>
        <active>true</active>
        <description>Pedido rectificado que puede ser modificado por el usuario</description>
        <label>Rectificado</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>